# GPUTerrainDemo

./: CMakeCopyDlls.cmake  CMakeLists.txt  Doxyfile  Readme.md  premake5.lua
CMakeModules/: FindSDL2.cmake
resources/shaders/: fragmentShader.glsl  vertexShader.glsl
resources/shaders/basic/: fragment.glsl  vertex.glsl
resources/shaders/planet/: calculateSphereVertex.glsl  fragment.glsl  fragment_cube_map.glsl  fragment_lines.glsl  geometry.glsl  vertex.glsl
resources/shaders/planet_terrain/: fragment.glsl
resources/shaders/planet_vectors/: fragment.glsl  vertex.glsl
resources/shaders/vert_color/: fragment.glsl  vertex.glsl
resources/textures/: BP.drawio
src/: OpenGLWindow.cpp  OpenGLWindow.h  main.cpp
src/GeoPlanetDemo/: Application.cpp  Application.h  ApplicationEventReceiver.cpp  ApplicationEventReceiver.h  ApplicationGui.cpp  ApplicationGui.h  ModifierPropertyWidowGui.cpp  ModifierPropertyWidowGui.h
src/GeoPlanetDemo/core/: Camera.cpp  Camera.h  Log.cpp  Log.h  OrbitCameraController.cpp  OrbitCameraController.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  Utils.h
src/GeoPlanetDemo/entities/: AxisEntity.cpp  AxisEntity.h  Entity.cpp  Entity.h  PlanetEntity.cpp  PlanetEntity.h
src/GeoPlanetDemo/interfaces/: LoggerInterface.h  MainLoopInterface.h  RendererInterface.h
src/GeoPlanetDemo/scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/GeoPlanetDemo/scene/entities/: AxisEntity.cpp  AxisEntity.h  PlanetEntity.cpp  PlanetEntity.h
src/GeoPlanetDemo/sdl/: SDLEventReceiverInterface.h  SDLGlMainLoop.cpp  SDLGlMainLoop.h  SDLOrbitCameraController.cpp  SDLOrbitCameraController.h  SDLPerformance.cpp  SDLPerformance.h
src/GeoPlanetDemo/vt/: BaseVisualizationTechnique.cpp  BaseVisualizationTechnique.h  ColorLinesVT.cpp  ColorLinesVT.h  PlanetCubeMapVT.cpp  PlanetCubeMapVT.h  PlanetDebugVT.cpp  PlanetDebugVT.h  PlanetVT.cpp  PlanetVT.h  VAOContainer.cpp  VAOContainer.h  VTFactory.h  VTType.h  VisualizationTechnique.cpp  VisualizationTechnique.h  types.h
src/GeoPlanetDemo/vt/planet/: PlanetCubeMapVT.cpp  PlanetCubeMapVT.h  PlanetElevationVT.cpp  PlanetElevationVT.h  PlanetFaceColorVT.cpp  PlanetFaceColorVT.h  PlanetPlatesVT.cpp  PlanetPlatesVT.h  PlanetVT.cpp  PlanetVT.h  PlanetVectorsVT.cpp  PlanetVectorsVT.h  PlanetWireFrameVT.cpp  PlanetWireFrameVT.h  vts.h
src/GeoPlanetDemo/vt/planet/helper/: PlateColorizer.cpp  PlateColorizer.h
src/TerrainDemo/: Application.cpp  Application.h  ApplicationEventReceiver.cpp  ApplicationEventReceiver.h  ApplicationEventReciever.cpp  ApplicationEventReciever.h  AxisEntity.cpp  AxisEntity.h  BasicLogger.h  Log.cpp  Log.h  OpenGLWindow.cpp  OpenGLWindow.h  Readme.md  SDLRenderer.cpp  SDLRenderer.h  TDCamera.cpp  TDCamera.h  TDScene.h  TerrainDemoVT.cpp  TerrainDemoVT.h  TerrainEntity.cpp  TerrainEntity.h  TerrainScene.cpp  TerrainScene.h  TerrainVT.cpp  TerrainVT.h  _TDScene.cpp  _TDScene.h  _TerrainVT.cpp  _TerrainVT.h  utils.h
src/TerrainDemo/Interfaces/: IControls.h  ILogger.h  ISDLEventReceiver.h  IScene.h  IVisualizationTechnique.h
src/TerrainDemo/core/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Log.cpp  Log.h  OrbitCameraController.cpp  OrbitCameraController.h  SDLControls.cpp  SDLControls.h  SDLRenderer.cpp  SDLRenderer.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  Utils.h
src/TerrainDemo/entities/: AxisEntity.cpp  AxisEntity.h  Entity.cpp  Entity.h  PlanetCubeMapEntity.cpp  PlanetCubeMapEntity.h  PlanetEntity.cpp  PlanetEntity.h
src/TerrainDemo/interfaces/: LoggerInterface.h  MainLoopInterface.h  RendererInterface.h
src/TerrainDemo/tdsdl/: SDLCameraController.cpp  SDLCameraController.h  SDLEventReceiverInterface.h  SDLGlMainLoop.cpp  SDLGlMainLoop.h  SDLOrbitCameraController.cpp  SDLOrbitCameraController.h  SDLPerformance.cpp  SDLPerformance.h  SDLRenderer.cpp  SDLRenderer.h
src/TerrainDemo/vt/: BaseVisualizationTechnique.cpp  BaseVisualizationTechnique.h  ColorLinesVT.cpp  ColorLinesVT.h  PlanetCubeMapVT.cpp  PlanetCubeMapVT.h  PlanetDebugVT.cpp  PlanetDebugVT.h  PlanetVT.cpp  PlanetVT.h  VAOContainer.cpp  VAOContainer.h  VTFactory.h  types.h
